--- a/projects/EnzyView/index.html
+++ b/projects/EnzyView/index.html
@@ -3,5 +3,13 @@
 <body bgcolor="#00FF67">
 <h1>EnzyView</h1>
 <p></p>
+<script type="module" >
+import './modules/Reaction.js'
+
+test1 = new Reaction
+
+console.log(test1.rate(1))
+
+</script>
 </body>
 </html>
