--- a/projects/EnzyView/index.html
+++ b/projects/EnzyView/index.html
@@ -3,13 +3,8 @@
 <body bgcolor="#00FF67">
 <h1>EnzyView</h1>
 <p></p>
-<script type="module" >
-import './modules/Reaction.js'
 
-test1 = new Reaction
+<script type="module" src="main.js"></script>
 
-console.log(test1.rate(1))
-
-</script>
 </body>
 </html>
