--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Zortru — project showcase">
+  <title>Zortru</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Zortru</h1>
-<p>I'm hosted with GitHub Pages.</p>
 
+  <header class="hero">
+    <h1>Zortru</h1>
+  </header>
+
+  <main>
+    <section class="projects">
+      <h2>Projects</h2>
+      <div class="project-grid">
+
+        <article class="project-card">
+          <a href="/projects/EnzyView/">
+            <span class="project-icon" aria-hidden="true">&#x1F9EA;</span>
+            <h3>EnzyView</h3>
+            <p>Enzyme kinetics calculator and visualizer. Plot Michaelis-Menten curves in real time.</p>
+          </a>
+        </article>
+
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2026 Zortru</p>
+  </footer>
 
 </body>
 </html>
