--- a/projects/EnzyView/index.html
+++ b/projects/EnzyView/index.html
@@ -1,23 +1,209 @@
 <!DOCTYPE html>
-<html>
-<body bgcolor="#00FF67">
-<h1>EnzyView</h1>
-<p></p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EnzyView — Enzyme Kinetics Simulator</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<div class="input">
-    <label for="vmax">Vmax</label>
-    <input type="number" id="vmax" value="1"/>
-    <button id="button" class="btn btn-primary">calcular</button>
-</div>
+  <header class="site-header">
+    <a href="/" class="breadcrumb">← Zortru</a>
+    <h1>EnzyView</h1>
+  </header>
 
-<label for="resultado" id="labelResultados">resultados</label>
-<input type="text" id="resultado" class="form-control" value="" readonly />
+  <div class="app-layout">
 
-<canvas id="myChart" width="400" height="400"></canvas>
+    <!-- ── Input Panel ──────────────────────────── -->
+    <aside class="input-panel">
 
-<script type="module" src="main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+      <!-- Mode -->
+      <div class="section-card">
+        <h2>Mode</h2>
+        <div class="form-row">
+          <label for="mode">Reactor</label>
+          <select id="mode">
+            <option value="batch">Batch</option>
+            <option value="cstr">CSTR</option>
+            <option value="series">CSTRs in Series</option>
+          </select>
+        </div>
+        <div id="batch-fields">
+          <div class="form-row">
+            <label for="Xmax">X max (%)</label>
+            <input type="number" id="Xmax" value="95" min="0" max="100" step="1">
+          </div>
+        </div>
+        <div id="cstr-fields" class="hidden">
+          <div class="form-row">
+            <label for="volume">V (L)</label>
+            <input type="number" id="volume" step="any">
+          </div>
+          <div class="form-row">
+            <label for="flowrate">F (L/min)</label>
+            <input type="number" id="flowrate" step="any">
+          </div>
+        </div>
+        <div id="series-fields" class="hidden">
+          <div class="form-row">
+            <label for="n-reactors">N reactors</label>
+            <input type="number" id="n-reactors" value="3" min="1" step="1">
+          </div>
+        </div>
+      </div>
 
+      <!-- Stoichiometry -->
+      <div class="section-card">
+        <h2>Stoichiometry: aS₁ + bS₂ → cP₁ + dP₂</h2>
+        <div class="coeff-grid">
+          <div class="form-row">
+            <label for="coeff-a">a</label>
+            <input type="number" id="coeff-a" value="1" min="0" step="any">
+          </div>
+          <div class="form-row">
+            <label for="coeff-b">b</label>
+            <input type="number" id="coeff-b" value="0" min="0" step="any">
+          </div>
+          <div class="form-row">
+            <label for="coeff-c">c</label>
+            <input type="number" id="coeff-c" value="1" min="0" step="any">
+          </div>
+          <div class="form-row">
+            <label for="coeff-d">d</label>
+            <input type="number" id="coeff-d" value="0" min="0" step="any">
+          </div>
+        </div>
+      </div>
+
+      <!-- Concentrations -->
+      <div class="section-card">
+        <h2>Initial Concentrations</h2>
+        <div class="form-row">
+          <label for="S10">[S₁]₀</label>
+          <input type="number" id="S10" value="50" min="0" step="any">
+        </div>
+        <div class="form-row">
+          <label for="S20">[S₂]₀</label>
+          <input type="number" id="S20" value="0" min="0" step="any">
+        </div>
+        <div class="form-row">
+          <label for="P10">[P₁]₀</label>
+          <input type="number" id="P10" value="0" min="0" step="any">
+        </div>
+        <div class="form-row">
+          <label for="P20">[P₂]₀</label>
+          <input type="number" id="P20" value="0" min="0" step="any">
+        </div>
+      </div>
+
+      <!-- Kinetics -->
+      <div class="section-card">
+        <h2>Kinetics</h2>
+        <div class="form-row">
+          <label for="Vmax">Vmax</label>
+          <input type="number" id="Vmax" value="100" min="0" step="any">
+        </div>
+        <div class="form-row">
+          <label for="Km">Km</label>
+          <input type="number" id="Km" value="10" min="0" step="any">
+        </div>
+        <div class="form-row">
+          <label for="inhibition">Inhibition</label>
+          <select id="inhibition">
+            <option value="none">None</option>
+            <option value="competitive">Competitive</option>
+            <option value="noncompetitive">Non-Competitive</option>
+            <option value="uncompetitive">Uncompetitive</option>
+            <option value="partially-competitive">Partially Competitive</option>
+            <option value="partially-noncompetitive">Partially Non-Competitive</option>
+            <option value="substrate">Substrate Inhibition</option>
+          </select>
+        </div>
+        <div id="field-I" class="form-row hidden">
+          <label for="I">[I]</label>
+          <input type="number" id="I" min="0" step="any">
+        </div>
+        <div id="field-KI" class="form-row hidden">
+          <label for="KI">KI</label>
+          <input type="number" id="KI" min="0" step="any">
+        </div>
+        <div id="field-KSI" class="form-row hidden">
+          <label for="KSI">KSI</label>
+          <input type="number" id="KSI" min="0" step="any">
+        </div>
+        <div id="field-k2I" class="form-row hidden">
+          <label for="k2I">k₂I</label>
+          <input type="number" id="k2I" min="0" step="any">
+        </div>
+        <div id="field-ET" class="form-row hidden">
+          <label for="ET">[E]T</label>
+          <input type="number" id="ET" min="0" step="any">
+        </div>
+        <div id="deactivation-group">
+          <div class="checkbox-row">
+            <input type="checkbox" id="deactivation">
+            <label for="deactivation">Enzyme deactivation</label>
+          </div>
+          <div id="field-kd" class="form-row hidden">
+            <label for="kd">kd</label>
+            <input type="number" id="kd" min="0" step="any">
+          </div>
+        </div>
+      </div>
+
+      <!-- Slider -->
+      <div class="section-card">
+        <h2>Parameter Slider</h2>
+        <div class="form-row">
+          <label for="slider-param">Param</label>
+          <select id="slider-param">
+            <option value="Vmax">Vmax</option>
+            <option value="Km">Km</option>
+            <option value="S10">S10</option>
+          </select>
+        </div>
+        <div class="coeff-grid">
+          <div class="form-row">
+            <label for="slider-min">Min</label>
+            <input type="number" id="slider-min" value="1" step="any">
+          </div>
+          <div class="form-row">
+            <label for="slider-max">Max</label>
+            <input type="number" id="slider-max" value="200" step="any">
+          </div>
+        </div>
+        <div class="form-row">
+          <label for="slider-step">Step</label>
+          <input type="number" id="slider-step" value="5" step="any">
+        </div>
+        <div class="slider-row">
+          <input type="range" id="slider-range" min="1" max="200" step="5" value="100">
+          <span class="slider-value" id="slider-value">100</span>
+        </div>
+      </div>
+
+      <!-- Errors -->
+      <div id="error-container" class="error-container hidden"></div>
+
+      <!-- Actions -->
+      <div class="btn-row">
+        <button type="button" id="calculate-btn" class="btn-calculate">Calculate</button>
+        <button type="button" id="reset-btn" class="btn-reset">Reset</button>
+      </div>
+
+    </aside>
+
+    <!-- ── Chart Panel ──────────────────────────── -->
+    <div class="chart-panel">
+      <div id="chart-container"></div>
+    </div>
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
+  <script type="module" src="main.js"></script>
 
 </body>
 </html>
