--- a/projects/EnzyView/index.html
+++ b/projects/EnzyView/index.html
@@ -120,6 +120,9 @@
             <option value="substrate">Substrate Inhibition</option>
           </select>
         </div>
+        <div id="equation-display" class="equation-display">
+          v = Vmax &middot; [S] / (Km + [S])
+        </div>
         <div id="field-I" class="form-row hidden">
           <label for="I">[I]</label>
           <input type="number" id="I" min="0" step="any">
@@ -189,6 +192,7 @@
       <!-- Actions -->
       <div class="btn-row">
         <button type="button" id="calculate-btn" class="btn-calculate">Calculate</button>
+        <button type="button" id="download-btn" class="btn-download" disabled>CSV</button>
         <button type="button" id="reset-btn" class="btn-reset">Reset</button>
       </div>
 
